unpackaged/main/default/objects/Account/fields/Demo_Gearset_1__c.field-meta.xml
<CustomField>
    <fullName>Demo_Gearset_1__c</fullName>
    <description>This is a demo field created for Gearset demo. Updating description.</description>
    <label>Demo Gearset 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>