unpackaged/main/default/objects/Account/fields/Demo_Gearset_2__c.field-meta.xml
<CustomField>
    <fullName>Demo_Gearset_2__c</fullName>
    <description>This is a demo field.</description>
    <label>Demo Gearset 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>