unpackaged/main/default/objects/Account/fields/Test_20240328__c.field-meta.xml
<CustomField>
    <fullName>Test_20240328__c</fullName>
    <description>Test field to test Gearset functionality.</description>
    <label>Test 20240328</label>
    <length>255</length>
    <type>Text</type>
</CustomField>